# chinese-hate-speech-detection-ml

./: README.md
app/: content.ts  manifest.json  package-lock.json  package.json  popup.html  popup.ts  styles.css  tsconfig.json
app/src/: background.ts  config.json  content.ts  index.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  popup.ts  styles.css  webpack.config.js
model/: pyproject.toml
model/src/: model.py
src/: model.py
vm_src/: app.py  model_eval.py  model_train.py
